# Javacodelessons

./: .gitignore  pyproject.toml
src/: fetch_urls.py  fetch_urls_updated.py  lru_cache.py  parallel_processing.py  search.py  singleton.py
src/week_1/: attribute_meta.py  currency_proxy.py  fetch_urls.py  fetch_urls_updated.py  lru_cache.py  parallel_processing.py
src/week_2/: distributed_lock.py  rate_limiter.py  redis_queue.py
src/week_2/drf_bookstore/: db.sqlite3  manage.py
src/week_2/drf_bookstore/drf_bookstore/: asgi.py  settings.py  urls.py  wsgi.py
src/week_2/drf_bookstore/main/: models.py  serializers.py  urls.py  views.py
src/week_2/drf_bookstore/main/migrations/: 0001_initial.py
src/week_2/drf_jwt/: manage.py
src/week_2/drf_jwt/drf_jwt/: asgi.py  settings.py  urls.py  wsgi.py
src/week_2/drf_jwt/main/: serializers.py  urls.py  views.py
