[project]
name = "lessons"
version = "1.0.0"
description = "Lessons from Javacode"
authors = [
    {name = "Sergey"}
]
dependencies = [
    "aiohttp>=3.10.11",
    "ruff>=0.9.7",
]
requires-python = ">=3.8"


[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
