[project]
name = "lessons"
version = "1.0.0"
description = "Lessons from Javacode"
authors = [
    {name = "Sergey"}
]
dependencies = [
    "aiohttp>=3.10.11",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "redis>=5.2.1",
    "ruff>=0.9.7",
    "uvicorn>=0.33.0",
]
requires-python = ">=3.8"


[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
